# ffpyper

./: CONFIG.md  Cargo.toml  README.md
src/: app.rs  config.rs
src/engine/: core.rs
src/engine/core/: ffmpeg_info.rs  scan.rs
src/ui/: state.rs
src/ui/dashboard/: mod.rs  sections.rs
src/ui/events/: config.rs  dashboard.rs  mod.rs  workers.rs
