[package]
name = "ffdash"
version = "0.3.2"
edition = "2024"
authors = ["Ben H <bcherb2@users.noreply.github.com>"]
description = "FFMPEG video encoder with live dashboard, hardware acceleration, and batch processing"
license = "MIT"
repository = "https://github.com/bcherb2/ffdash"
homepage = "https://github.com/bcherb2/ffdash"
documentation = "https://github.com/bcherb2/ffdash"
readme = "README.md"
keywords = ["video", "encoder", "vp9", "av1", "ffmpeg"]
categories = ["command-line-utilities", "multimedia::video", "multimedia::encoding"]
rust-version = "1.85"

[features]
dev-logging = []
dev-tools = []

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shlex = "1.3"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
ratatui = "0.29"
crossterm = "0.29"
tui-textarea = "0.6"
tui-checkbox = "0.3"
rand = "0.8"
sysinfo = "0.30"
waveformchart = "0.1.0"
dirs = "5"
clap = { version = "4", features = ["derive"] }
tui-piechart = "0.2"
chrono = "0.4"
libc = "0.2"

[build-dependencies]
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
proptest = "1.5"
tempfile = "3"
anyhow = "1"
insta = { version = "1.40", features = ["json", "toml"] }

# Configuration for cargo-deb (Debian package generation)
[package.metadata.deb]
maintainer = "Ben H <bcherb2@users.noreply.github.com>"
copyright = "2025, Ben H <bcherb2@users.noreply.github.com>"
license-file = ["LICENSE", "0"]
extended-description = """\
ffdash is a video encoder (VP9, AV1) with a live TUI dashboard, hardware acceleration \
support (VA-API, QSV, NVENC), and efficient batch processing capabilities. It provides \
real-time encoding statistics, queue management, and customizable encoding profiles."""
depends = "ffmpeg (>= 8.0)"
section = "video"
priority = "optional"
assets = [
    ["target/release/ffdash", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ffdash/", "644"],
    ["CONFIG.md", "usr/share/doc/ffdash/", "644"],
]
